# WeakLensingQML

./: README.md
cpp/: CMakeLists.txt  README.md  main.cpp  py_library.cpp
cpp/detail/: ComputeCl.h  MatrixReplacement.h  constants.h
cpp_star_mask/: CMakeLists.txt  README.md  main.cpp
data/masks/: README.md
examples/: power_spectra_and_covariance_estimation.ipynb
python/: Covariances_MaskApodising.py  Covariances_Stars.py  FisherComparison.py  PostProcessing.py  PreProcessing.py
python/NonGaussianMaps/: Binning.py  NonGaussianMapHist.py  Plots.py  PostProcess_PCl.py  PostProcess_QML.py  RunFlask.py
python/lib/CppInterface/: CppLib.py  GenerateCppConstants.py  GeneratePowerSpectra.py
python/lib/FlaskFiles/: FlaskDetail.py
python/lib/PostProcessing/: Enums.py  PCl_covariances.py  ParameterFisher.py  QML_covariances.py
python/lib/PreProcessing/: GenerateMask.py  QMLClass.py  Y_matrix_class.py
